# sql-agent-lab

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODING_ROUTINE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NEXT_SESSION.md  NEXT_SESSION_2025-03-29.md  OLLAMA_EXTENDED_TEST_RESULTS.md  OLLAMA_MODEL_TESTING.md  OLLAMA_SCAN_RESULTS.md  OLLAMA_TEST_RESULTS.md  PORT_SCAN_RESULTS.md  README.md  SESSION_STATUS.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2025-03-28.md  TEST_RESULTS.md  model_speed_test.py  model_test.py  ollama_extended_test_results.json  ollama_test_results.json  pyproject.toml  test_all_models.py  test_basic_ollama.py  test_direct_sql.py  test_minimal_app.py  test_model.py  test_ollama.py  test_sqlite.py
.devcontainer/: devcontainer.json
app/: main.py
data/: Orders.xlsx  Stock.xlsx  inventory.db
docs/: index.md  model_timeouts.md
notebooks/: 1.Test_ollama_coding_models.ipynb  2.Test_sqlite_db.ipynb  3.Test_function_calling.ipynb  3.Test_sql_query_chain.ipynb  4.Langchain_sql_agent.ipynb  4.Langchain_sql_agent_qwen2.5-coder_05b.ipynb  4.Ollama_Langchain_sql_agent_qwen2.5-coder_05b.ipynb  4.Ollama_Langchain_sql_agent_qwen2.5-coder_3b.ipynb  4.Ollama_Langchain_sql_agent_qwen2.5-coder_7b.ipynb  5.Test_hugging_face_sql_models.ipynb  5.Test_langchain_huggingface_integration.ipynb  6.HuggingFace_Langchain_react_agent_serpapi_tool.ipynb  6.HuggingFace_Langchain_react_agent_sqlite_tool.ipynb  6.Langchain_sql_agent_t5_text2sql_spider.ipynb  7.Ollama_Langgraph_agent_sqlite_tool .ipynb  Test_create_sqlite_db_from_excels.ipynb  Test_ollama_coding_models.ipynb  (+5 more)
(+26 files in other folders)
